# emberlm

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
configs/: llama_1b_sft.json  qwen3_0_6b_sft.json  smollm2_135m_sft.json  smollm2_360m_sft.json
include/ctd/: allocator.h  autograd.h  cublas_utils.h  cuda_utils.h  device.h  dtype.h  optim.h  safetensors.h  sampling.h  storage.h  tensor.h
include/ctd/nn/: attention.h  embedding.h  kv_cache.h  linear.h  mlp.h  model.h  rms_norm.h  transformer_block.h
include/ctd/ops/: elementwise.h  embedding.h  kv_cache.h  loss.h  mask.h  matmul.h  norm.h  permute.h  repeat_kv.h  rope.h  softmax.h
scripts/: _ctd_common.py  convert_weights.py  eval_gsm8k.py  fetch_model.py  prepare_data.py  quick_chat.py  reference_inference.py  serve_inference.py  serve_monitor.py
src/: CMakeLists.txt
src/core/: allocator.cpp  autograd.cu  cublas_utils.cpp  optim.cu  safetensors.cpp  sampling.cpp  storage.cpp  tensor.cpp
src/nn/: model.cpp
src/ops/: elementwise.cu  embedding.cu  kv_cache.cu  loss.cu  mask.cu  matmul.cpp  norm.cu  permute.cu  repeat_kv.cu  rope.cu  softmax.cu
tests/: CMakeLists.txt  test_activations.cpp  test_autograd.cpp  test_bmm.cpp  test_data_bins.cpp  test_elementwise.cpp  test_embedding.cpp  test_integration_block.cpp  test_integration_embedding.cpp  test_integration_kvcache.cpp  test_integration_model.cpp  test_mask.cpp  test_matmul.cpp  test_norm.cpp  test_permute.cpp  test_rope.cpp  test_smoke.cpp  test_softmax.cpp  test_tensor.cpp  test_train_forward.cpp
tools/: CMakeLists.txt
tools/ctd_generate/: main.cpp
tools/ctd_train/: main.cpp
web/: index.html  train.html
